hphp/hack/test/typecheck/ffp/function_async_lambda_bad.php
<?hh

// Explicit return types on lambdas must be Awaitable.

function foo(): void {
  $f = async (): int ==> 1;
}

function bar(): void {
  $f = async function(): int { return 1; };
}
